v6 can now be compiled with gradle 7 and java 16. Why am i still supporting this when v7 comes out in just over a month?