@@ -24,8 +24,8 @@ buildscript{
 }
 
 plugins{
-    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
-    id "org.jetbrains.kotlin.kapt" version "1.4.32"
+    id "org.jetbrains.kotlin.jvm" version "1.6.0-RC"
+    id "org.jetbrains.kotlin.kapt" version "1.6.0-RC"
 }
 
 allprojects{
@@ -303,9 +303,8 @@ project(":core"){
 
     kapt{
         javacOptions{
-            option("-source", "14")
+            option("-source", "16")
             option("-target", "1.8")
-            option("--enable-preview")
         }
     }
 
@@ -379,7 +378,7 @@ project(":core"){
         implementation group: 'com.beust', name: 'klaxon', version: '5.4'  // Yes, I'm aware arc has a json system, but I don't know how to use it.
 //        implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3' Not used anywhere, commented to reduce jar size
 
-        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
+        annotationProcessor 'com.github.Anuken:jabel:0.6.0'
         compileOnly project(":annotations")
         kapt project(":annotations")
     }
